--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -453,7 +453,7 @@ body .container.body .right_col {
 body {
     color: #666;
     background: #0f9d58;
-    font-family: "Roboto-Light", Helvetica, Arial, sans-serif !important;
+    font-family: "Roboto",Helvetica,Arial,sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 1.471;
@@ -5834,7 +5834,7 @@ tr.shown td.details-control {
 
 .navbar.nav_title img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 90%;
 }
 
 .form-group .checkbox label,
