--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -228,7 +228,7 @@ img.aligncenter {
     padding: 60px 0 60px;
 }
 .secondary_page_wrapper .container{
-    margin-left: 275px;
+    padding-left: 160px;
 }
 
 .main_product .title a {
@@ -1566,7 +1566,7 @@ form li:last-child > [class|="col"] > [class*="button"]:only-child {
 }
 
 .search > * {
-    height: 39px !important;
+    height: 35px !important;
     /*border-top:2px solid #00695c !important;*/
     /*border-bottom:2px solid #009688 !important;*/
 }
@@ -3975,7 +3975,7 @@ form > ul > li:after,
 		-------------------------------------------- */
 
 .single_product {
-    max-width: 450px;
+    max-width: 300px;
     width: 450px;
     height: 293px;
     float: left;
@@ -5040,7 +5040,7 @@ a[class*="fancybox_item"]:hover > .helper_icon {
 
 .seller_info .photo {
     margin-right: 15px;
-    width: 100px;
+    width: 60px;
 }
 
 .kho_info {
@@ -8613,6 +8613,7 @@ a:hover {
     float: left;
     height: 350px;
     padding: 0px;
+    background-color: #fff;
 }
 .list_company_row {
     height: 280px;
@@ -8632,7 +8633,7 @@ a:hover {
     /*padding-left: 10px;*/
     min-height: 175px;
     /*overflow: hidden;*/
-    width: 217px;
+    /*width: 217px;*/
 }
 .company_cell_other {
     padding: 0px 5px;
@@ -8651,7 +8652,7 @@ a:hover {
     /*margin-left: 15px;*/
     min-height: 175px;
     overflow: hidden;
-    width: 217px;
+    /*width: 217px;*/
 }
 .well.box_1 {
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
@@ -8978,8 +8979,8 @@ ul.mobile-menu-icon {
 } */
 
 .page_wrapper .container {
-    padding: 10px 50px 0 0;
-    margin-left: 275px;
+    padding: 10px 0 0 0;
+    padding-left: 160px;
 }
 
 header {
@@ -8999,7 +9000,7 @@ header {
 }
 #search {
     float: left;
-    margin-top: 7px;
+    margin-top: 5px;
     position: relative;
     width: 420px;
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
@@ -9200,18 +9201,18 @@ a.especially {
     z-index: 5;
     font-weight: bold;
 }
+.fb_iframe_widget_lift{
+    position: absolute;
+    right: 0 !important;
+    z-index: 999;
+}
 .mark-tab li {
     border-right: 1px solid #cfd8dc;
     float: left;
     line-height: 45px;
     padding: 0 30px;
 }
-.mark-tab > .fbsharebutton {
-    float: right;
-    position: relative;
-    right: 10px;
-    top: 13px;
-}
+
 #main-profile {
     overflow: hidden;
     display: block;
@@ -9476,4 +9477,8 @@ table.listview {
 }
 .sendfb {
     padding-right: 303px;
+}
+#products_container {
+    padding: 16px 14px 30px !important;
+    border: 1px solid #CFD8DC;
 }
