--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5957,7 +5957,7 @@ ul.tab-fill li:hover {
     font-size: 15px;
     margin-bottom: 5px;
     /*width: 80%;*/
-    /*overflow: hidden;*/
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -7023,7 +7023,7 @@ table.dtp-picker-days thead {
 
 .list-unstyled span.label-box {
     display: inline-block;
-    width: 70px;
+    width: 100px;
 }
 
 .list-unstyled span.label-box55 {
