--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -8441,9 +8441,10 @@ a:hover {
 }
 
 .img_cate {
-    width: 35px;
+    width: 18px;
     display: inline-block;
-    padding-right: 10px;
+    margin-left: 5px;
+    margin-right: 4px;
 }
 
 .img_banner {
@@ -9484,4 +9485,9 @@ table.listview {
 }
 .contacts {
     box-shadow: 3px 3px 1px 0 rgba(0, 0, 0, 0.20), 1px 2px 4px 0 rgba(0, 0, 0, .09) !important;
+}
+.icon_home {
+    color: #808080;
+    font-size: 18px;
+    margin-bottom: 3px;
 }
