--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9891,6 +9891,11 @@ ul.box-lp > li a {
     font-size: 20px;}
 }
 .paddingLandingPage {
+    /* padding-top: 60px;
+    margin-top: -80px; */
+    padding-top: 80px;
+}
+#gioithieu {
     padding-top: 60px;
     margin-top: -80px;
 }
